--- a/Task6/Task6.vcxproj.filters
+++ b/Task6/Task6.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="ChildClasses.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="AbstractClasses.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractClasses.h">
