--- a/Task6/Task6.vcxproj
+++ b/Task6/Task6.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="AbstractClasses.h" />
     <ClInclude Include="ChildClasses.h" />
+    <ClInclude Include="Task6.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
