--- a/Task6/Task6.vcxproj.filters
+++ b/Task6/Task6.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="ChildClasses.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Task6.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
